# aparapi-native

./: .gitignore  .gitmodules  ATTRIBUTIONS.md  Aparapi.sln  Aparapi.vcxproj  Aparapi.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  Makefile.am  README.md  build.sh  build.xml  buildArmLinux.sh  buildDarwin.sh  buildMingW.sh  configure.ac  docker-compose.yml  prepare.sh
src/cpp/: CLException.h  CLHelper.cpp  CLHelper.h  Common.h  JNIExceptions.cpp  JNIExceptions.h  JNIHelper.cpp  JNIHelper.h  agent.cpp  classtools.cpp  classtools.h  classtoolstest.cpp  cltest.cpp
src/cpp/invoke/: JavaArgs.h  OpenCLArgDescriptor.cpp  OpenCLArgDescriptor.h  OpenCLJNI.cpp  OpenCLJNI.h  OpenCLKernel.h  OpenCLMem.cpp  OpenCLMem.h  OpenCLProgram.h
src/cpp/runKernel/: Aparapi.cpp  Aparapi.h  AparapiBuffer.cpp  AparapiBuffer.h  ArrayBuffer.cpp  ArrayBuffer.h  Config.cpp  Config.h  ConfigSettings.h  JNIContext.cpp  JNIContext.h  KernelArg.cpp  KernelArg.h  List.h  ProfileInfo.cpp  ProfileInfo.h  Range.cpp  Range.h  Util.h
